trpc register moren than one service

--- a/grpctest/keys/server.conf
+++ b/grpctest/keys/server.conf
@@ -14,11 +14,11 @@ organizationName = Organization Name (eg, company)
 organizationName_default = Sheld
 commonName = Common Name (e.g. server FQDN or YOUR name)
 commonName_max = 64
-commonName_default = wbing 
+commonName_default = wbing
 
 [ req_ext ]
 subjectAltName = @alt_names # 此处尤为重要，需要用该服务名字填写到客户端的代码中
 
 [alt_names]
-DNS.1 = www.eline.com
+DNS.1 = localhost
 IP = 127.0.0.1
